...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Name"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/user_first_name_field" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Last Name"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/user_last_name_field" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/user_email_field"
            android:hint="Email"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/user_password_field"
            android:hint="Password"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="Dados do Restaurante"
...

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/restaurant_name_field"
            android:hint="Restaurant Name"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/restaurant_description"
            android:hint="Restaurant Description"
            android:layout_gravity="center"
            />

            <!-- University Name Label -->
            <TextView
...

            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/restaurant_location"
            android:hint="Referência de Localização"
            android:layout_gravity="center"
            />

        <Button
            android:text="Sign Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_sing_up_button" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>
...
