...

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="entrar_button">Entrar</string>

    <string name="main_page">Main Page</string>
    <string name="enter_your_url">http://[ENTER-YOUR-URL-HERE]</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
...
    <!-- Register Layout -->
    <string name="register">Registrar</string>
    <string name="first_name">Primeiro Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="sign_up">CRIAR CONTA</string>
    <string name="has_account">Já possui uma conta? Faça login.</string>
    <string name="university">Universidade</string>
    <string name="lowercase_university">university</string>
    <string name="hasnot_account">Não possui uma conta? Registre-se!</string>
    <string name="register_fail">Registro falhou</string>
    <string name="four_characters">pelo menos 4 caracteres</string>
    <string name="three_characters">Pelo menos 3 caracteres</string>
    <string name="two_characters">pelo menos 2 caracteres</string>
    <string name="valid_email">digite um email válido</string>
    <string name="between_four_ten_characters">entre 4 e 10 caracteres alfanuméricos</string>
    <string name="between_ten_oneH_characters">entre 10 e 100 caracteres</string>
    <string name="between_ten_fifty_characters">entre 10 e 50 caracteres</string>
    <string name="cardapio_tab">Cardápio</string>

    <!-- New Review Layout -->
    <string name="add_comment">Insira seu comentário</string>
    <string name="create_review">Avaliar</string>

    <!-- Edit Restaurant -->
...
