...
        android:title="Editar Informações"
        app:showAsAction="never"/>

    <item
        android:id="@+id/user_sign_off"
        android:orderInCategory="100"
        android:title="Sair"
        app:showAsAction="never"/>

</menu>
